--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -128,6 +128,7 @@
 }
 .menu-list-box {
     padding: 100px;
+    background-color: #fff;
 }
 .menu-img {
     border-radius: 20px;
@@ -173,6 +174,7 @@
 .chef {
     position: relative;
     padding: 50px;
+    background-color: #fff;
 }
 .top-right-img {
     position: absolute;
@@ -697,4 +699,53 @@
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+}
+.thongbao {
+    position: fixed;
+    width: 400px;
+    height: 100px;
+    background-color: #fff;
+    display: flex;
+    top: 80px;
+    box-shadow: 0 0 5px #fff;
+    right: -100%;
+    border-radius: 10px;
+    align-items: center;
+    z-index: 5;
+    transition: ease 1s;
+}
+.thongbao i {
+    font-size: 3rem;
+    margin: 20px;
+}
+.thongbao h4 {
+    font-size: 2rem;
+}
+.thongbao p {
+    font-size: 1.6rem;
+}
+.menu-icon {
+    font-size: 3rem;
+    color: #fff;
+    margin-right: 20px;
+}
+.close-menu-icon {
+    display: none;
+}
+.menu-mobile {
+    width: 50vw;
+    position: fixed;
+    display: block;
+    height: auto;
+    background-color: #000000;
+    box-shadow: 0 0 5px #000;
+    padding:10px 20px;
+    right: -100%;
+    text-align: center;
+    transition: ease 1s;
+}
+.menu-mobile-item {
+    font-size: 1.6rem;
+    font-weight: 600;
+    padding: 5px 0;
 }
